--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,17 @@
-<h2>Login</h2>
 
-<form>
-  <div>
-    <label for="user-login">Username:</label>
-    <input class="form-input" type="text" id="user-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn" type="submit">login</button>
-  </div>
-</form>
+  <section class="loginSec">
+  <form class="loginForm">
+    <h2 id="logTitle">Login</h2>
+    <div id="userName">
+      <label for="user-login">Username:</label>
+      <input class="form-input" type="text" id="user-login" />
+    </div>
+    <div id="password">
+      <label for="password-login">password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="submitBtn">
+      <button class="btn" type="submit">login</button>
+    </div>
+  </form>
+</section>
