--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
 <!-- LANDING PGAE, ADD NAV? MAKE MORE APPEALABLE-->
-<main>
-    <section>
-      <div>
-        <div>
+  <main>
+    <section class="wkoutSect">
+      <div class="wkoutRout">
+        <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
         </div>
         <div>
@@ -10,9 +10,9 @@
         </div>
       </div>
     </section>
-    <section>
-      <div>
-        <div>
+    <section class="wkoutSect">
+      <div class="wkoutRout">
+        <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
         </div>
         <div>
@@ -20,9 +20,9 @@
         </div>
       </div>
     </section>
-    <section>
-      <div>
-        <div>
+    <section class="wkoutSect">
+      <div class="wkoutRout">
+        <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
         </div>
         <div>
