--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
         {{#if logged_out}}
         <a href="#">Sign Up</a>
         {{else}}
-        <a href="">Log Out</a>
+        <a href="/login">Log Out</a>
         {{/if}}
       </nav>
     </div>
