--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,8 @@
 <!-- LANDING PGAE, ADD NAV? MAKE MORE APPEALABLE-->
-  <main>
+
+  <main class="wkOutMain">
     <section class="wkoutSect">
+      <a href="#">
       <div class="wkoutRout">
         <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
@@ -9,8 +11,10 @@
             <!-- Description of workout -->
         </div>
       </div>
+      </a>
     </section>
     <section class="wkoutSect">
+      <a href="#">
       <div class="wkoutRout">
         <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
@@ -19,8 +23,10 @@
             <!-- Description of workout -->
         </div>
       </div>
+      </a>
     </section>
     <section class="wkoutSect">
+      <a href="#">
       <div class="wkoutRout">
         <div class="routinenName">
           <h2>{{WORKOUT.NAME}}</h2>
@@ -29,8 +35,17 @@
           <!-- Description of workout -->
         </div>
       </div>
+      </a>
+    </section>
+    <section class="wkHistSect">
+      <a href="#">
+      <div class="navWkHist">
+        <div class="routinenName">
+          <h2>Workout History</h2>
+        </div>
+      </div>
+      </a>
     </section>
 </main>
-<div>
-    <button type="button">My Work Out History</button>
-</div>
+
+  
