--- a/views/partials/exercise-details.handlebars
+++ b/views/partials/exercise-details.handlebars
@@ -1,12 +1,14 @@
-<div class="exerTitle">
-  <h2>{{EXERCISE.NAME}}</h2>
-</div>
-<div class="exerData">
-  <div class="exerSRep">
-  <a>{{SETS}} Left</a>
-  <a>{{REPS}} left</a>
-  </div>
-  <div class="exerImg">
-  <img src="">
-  </div>
-</div>
+        <div id="exerTitle">
+          <h2>{{EXERCISE.NAME}}</h2>
+        </div>
+        <div class="exerData">
+          <div class="exerSRep">
+          <a>{{SETS}} Left</a>
+          <a>{{REPS}} left</a>
+          </div>
+          <div class="exerImg">
+            <p>IMAGE</p>
+          <img src="">
+          </div>
+        </div>
+      
