--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,15 +1,16 @@
-<h2>Sign Up</h2>
-
-<form>
-  <div>
-    <label for="user-login">Username:</label>
-    <input class="form-input" type="text" id="user-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn" type="submit">Sign Up</button>
-  </div>
-</form>
+  <section class="loginSec">
+  <form class="loginForm">
+    <h2 id="SignUpTitle">Sign Up</h2>
+    <div id="userName">
+      <label for="user-signup">Username:</label>
+      <input class="form-input" type="text" id="user-signup" />
+    </div>
+    <div id="password">
+      <label for="password-signup">password:</label>
+      <input class="form-input" type="password" id="password-signup" />
+    </div>
+    <div class="submitBtn">
+      <button class="signUpbtn" type="submit">Sign Up</button>
+    </div>
+  </form>
+</section>
