--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
 </head>
 <body>
   <header>
+    <div class="pageTitle">
+      <h1>Waist <br><a id="partTitle">Management</a></h1>
+    </div>
     <div>
       <nav>
         {{#if logged_in}}
@@ -18,9 +21,6 @@
         <a href="/login">Log In</a>
         {{/if}}
       </nav>
-    </div>
-    <div>
-      <h1>Waist Management</h1>
     </div>
   </header>
 {{{body}}}
