--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,19 @@
-
   <section class="loginSec">
-  <form class="loginForm">
-    <h2 id="logTitle">Login</h2>
-    <div id="userName">
-      <label for="user-login">Username:</label>
-      <input class="form-input" type="text" id="user-login" />
-    </div>
-    <div id="password">
-      <label for="password-login">password:</label>
-      <input class="form-input" type="password" id="password-login" />
-    </div>
-    <div class="submitBtn">
-      <button class="btn" type="submit">login</button>
-    </div>
-  </form>
-</section>
+    <form class="loginForm">
+      <div id="logTitle">
+        <h2 id="loginH">Login</h2>
+      </div>
+      <div id="loginCom">
+        <p>Login to continue</p>
+      </div>
+      <div id="userName">
+        <input class="form-input" type="text" placeholder="Username" id="userLogin" />
+      </div>
+      <div id="password">
+        <input class="form-input" type="password" placeholder="Password" id="passwordLogin" />
+      </div>
+      <div class="submitBtn">
+        <button id="loginBtn" type="submit">Login</button>
+      </div>
+    </form>
+  </section>
