--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,16 +1,19 @@
   <section class="loginSec">
-  <form class="loginForm">
-    <h2 id="SignUpTitle">Sign Up</h2>
-    <div id="userName">
-      <label for="user-signup">Username:</label>
-      <input class="form-input" type="text" id="user-signup" />
-    </div>
-    <div id="password">
-      <label for="password-signup">password:</label>
-      <input class="form-input" type="password" id="password-signup" />
-    </div>
-    <div class="submitBtn">
-      <button class="signUpbtn" type="submit">Sign Up</button>
-    </div>
-  </form>
-</section>
+    <form class="loginForm">
+      <div id="signUpTitle">
+        <h2 id="signUpH">Sign Up</h2>
+      </div>
+      <div id="signUpCom">
+        <p>Sign up to continue</p>
+      </div>
+      <div id="userName">
+        <input class="form-input" type="text" placeholder="Username" id="userSignup" />
+      </div>
+      <div id="password">
+        <input class="form-input" type="password" placeholder="Password" id="passwordSignup" />
+      </div>
+      <div class="submitBtn">
+        <button id="signUpbtn" type="submit">Sign Up</button>
+      </div>
+    </form>
+  </section>
