fixing all paths so we can naviagte to each page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 }
 
-.loginForm {
+.loginForm, .signupForm {
 
   display: flex;
   flex-direction: column;
