--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,21 @@
-  <section class="loginSec">
-    <form class="loginForm">
-      <div id="signUpTitle">
-        <h2 id="signUpH">Sign Up</h2>
-      </div>
-      <div id="signUpCom">
-        <p>Sign up to continue</p>
-      </div>
-      <div id="userName">
-        <input class="form-input" type="text" placeholder="Username" id="userSignup" />
-      </div>
-      <div id="password">
-        <input class="form-input" type="password" placeholder="Password" id="passwordSignup" />
-      </div>
-      <div class="submitBtn">
-        <button id="signUpbtn" type="submit">Sign Up</button>
-      </div>
-    </form>
-  </section>
+<section class="loginSec">
+  <form class="signupForm">
+    <div id="signUpTitle">
+      <h2 id="signUpH">Sign Up</h2>
+    </div>
+    <div id="signUpCom">
+      <p>Sign up to continue</p>
+    </div>
+    <div id="userName">
+      <input class="form-input" type="text" placeholder="Username" id="userSignup" />
+    </div>
+    <div id="password">
+      <input class="form-input" type="password" placeholder="Password" id="passwordSignup" />
+    </div>
+    <div class="submitBtn">
+      <button id="signUpbtn" type="submit">Sign Up</button>
+    </div>
+  </form>
+</section>
+
+<script src="./js/signup.js"></script>
