--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,15 +15,19 @@
     <div>
       <nav>
         {{#if logged_in}}
-        <a href="#">Sign Up</a>
-        <a href="#">Sign Up</a>
+        <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/login">Log In</a>
+        <a href="#">Sign Up</a>
         {{/if}}
       </nav>
     </div>
   </header>
 {{{body}}}
+
+  {{#if logged_in}}
+  <h1>Waist <br><a id="partTitle">KATY</a></h1>
+  <script src="./js/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
