--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,21 @@
-  <section class="loginSec">
-    <form class="loginForm">
-      <div id="logTitle">
-        <h2 id="loginH">Login</h2>
-      </div>
-      <div id="loginCom">
-        <p>Login to continue</p>
-      </div>
-      <div id="userName">
-        <input class="form-input" type="text" placeholder="Username" id="userLogin" />
-      </div>
-      <div id="password">
-        <input class="form-input" type="password" placeholder="Password" id="passwordLogin" />
-      </div>
-      <div class="submitBtn">
-        <button id="loginBtn" type="submit">Login</button>
-      </div>
-    </form>
-  </section>
+<section class="loginSec">
+  <form class="loginForm">
+    <div id="logTitle">
+      <h2 id="loginH">Login</h2>
+    </div>
+    <div id="loginCom">
+      <p>Login to continue</p>
+    </div>
+    <div id="userName">
+      <input class="form-input" type="text" placeholder="Username" id="userLogin" />
+    </div>
+    <div id="password">
+      <input class="form-input" type="password" placeholder="Password" id="passwordLogin" />
+    </div>
+    <div class="submitBtn">
+      <button id="loginBtn" type="submit">Login</button>
+    </div>
+  </form>
+</section>
+
+<script src="./js/login.js"></script>
