--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         {{#if logged_in}}
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="#">Sign Up</a>
+        <a href="/signup">Sign Up</a>
         {{/if}}
       </nav>
     </div>
