--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,11 +122,6 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
   width: 300px;
 }
 
-#loginH {
-
-
-}
-
 #userLogin, #userSignup {
 
   padding: 10px 40px;
@@ -169,11 +164,24 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 4px solid darkslategrey;
+  background-color: #efefef;
+  border: 3px solid #858585;
+  border-radius: 10px;
+  box-shadow: 8px 8px 10px #b9512b;
   width: 800px;
   height: 220px;
 
 }
+
+/*.routinenName {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 500px;
+
+}*/
 
 .wkHistSect {
 
@@ -186,7 +194,10 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 4px solid darkslategrey;
+  background-color: #efefef;
+  border: 3px solid #858585;
+  border-radius: 10px;
+  box-shadow: 8px 8px 10px #b9512b;
   width: 800px;
   height: 140px;
 
