--- a/views/partials/exercise-details.handlebars
+++ b/views/partials/exercise-details.handlebars
@@ -3,8 +3,8 @@
         </div>
         <div class="exerData">
           <div class="exerSRep">
-          <a>{{SETS}} Left</a>
-          <a>{{REPS}} left</a>
+          <a>Sets left: {{SETS}}</a>
+          <a>Reps left: {{REPS}}</a>
           </div>
           <div class="exerImg">
             <p>IMAGE</p>
