--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,9 +222,12 @@ box-shadow: 50px 0px 10px #efefef inset, -50px 0px 10px #efefef inset;
 
 .exerBox {
 
-  border: 4px solid darkslategrey;
+  border: 3px solid #858585;
+  background-color: #efefef;
+  box-shadow: 8px 8px 10px #b9512b;
+  border-radius: 10px;
   width: 600px;
-  height: 220px;
+  height: 370px;
 
 }
 
@@ -267,7 +270,9 @@ padding-top: 20px;
 
 .timeContainer {
 
-  border: 4px solid darkslategrey;
+  background-color: #efefef;
+  border-radius: 10px;
+  box-shadow: 8px 8px 10px #b9512b, rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   width: 480px;
   height: 260px;
 
@@ -289,8 +294,9 @@ padding-top: 20px;
 
 .timer {
 
- border: 1px solid black;
- background-color: black;
+ background-color: #efefef;
+ border-radius: 5px;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
  height: 100px;
  width: 300px;
   
@@ -304,21 +310,6 @@ padding-top: 30px;
 
 }
 
-#startBtn {
-
-border: 2px solid black;
-width: 120px;
-height: 40px;
-
-}
-
-#stopBtn {
-
-  border: 2px solid black;
-  width: 120px;
-  height: 40px;
-
-}
 
 #navBtns {
 
@@ -328,20 +319,83 @@ height: 40px;
 
 }
 
-#finishBtn {
 
-  border: 2px solid black;
-  width: 120px;
-  height: 40px;
+#nextBtn, #finishBtn, #stopBtn, #startBtn{
 
+    background-color: initial;
+    background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+    height: 40px;
+    line-height: 40px;
+    outline: 0;
+    overflow: hidden;
+    padding: 0 20px;
+    pointer-events: auto;
+    position: relative;
+    text-align: center;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: top;
+    white-space: nowrap;
+    width: 120px;
+    z-index: 9;
+    border: 0;
+    transition: box-shadow .2s;
 
-}
+  }
+  
+  #nextBtn:hover, #finishBtn:hover {
+    box-shadow: #858585 0 3px 8px;
+  }
 
-#nextBtn {
+  .wkOutHistSect {
 
-  border: 2px solid black;
-  width: 120px;
-  height: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    padding-top: 39px;
 
+  }
 
-}
+  #wkOutHistContainer {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 3px solid #858585;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    box-shadow: 8px 8px 10px #b9512b, rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    height: 40px;
+    width: 200px;
+
+  }
+
+  #wkOutHistContainer:hover {
+    
+    animation-duration: 2s;
+    animation-name: wkOutHistContainer;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+
+  }
+
+  @keyframes wkOutHistContainer {
+
+    0% {
+      height: 40px;
+      width: 250px;
+    }
+    100% {
+      height: 200px;
+      width: 180px;
+    }
+
+  }
