--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,5 +33,5 @@
   <script src="./js/logout.js"></script>
   {{/if}}
 </body>
-  <script src="./public/js/index.js"></script>
+  <script src="/js/index.js"></script>
 </html>
