--- a/views/workouthistory.handlebars
+++ b/views/workouthistory.handlebars
@@ -1,5 +1,15 @@
-{{#each}}
-<section>
-    
-</section>
+{{#each userwkouts as |userwkout|}}
+  <section class="wkOutHistSect">
+    <div id="wkOutHistContainer">
+      <div id="routTitle">
+        <h3>{{userwkout}}</h3>
+      </div>
+      <div id="exercList">
+        <p>exercise1<br>exercise2<br>exercise3</p>
+      </div>
+      <div id="exercDate">
+        <h3>8/18/2023</h3>
+      </div>
+    </div>
+  </section>
 {{/each}}
