--- a/views/workouthistory.handlebars
+++ b/views/workouthistory.handlebars
@@ -1,14 +1,12 @@
 {{#each userwkouts as |userwkout|}}
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
-      <div id="routTitle">
-        <h3>{{userwkout}}</h3>
-      </div>
-      <div id="exercList">
-        <p>exercise1<br>exercise2<br>exercise3</p>
-      </div>
       <div id="exercDate">
         <h3>8/18/2023</h3>
+      </div>
+      <div id="exercList">
+        <h3>Routine</h3>
+        <p>exercise1<br>exercise2<br>exercise3</p>
       </div>
     </div>
   </section>
