--- a/views/workouthistory.handlebars
+++ b/views/workouthistory.handlebars
@@ -1,4 +1,5 @@
-{{#each userwkouts as |userwkout|}}
+<main class="wkOutHistSect">
+  {{#each pastWorkouts as |pastWorkout|}}
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
       <div id="exercDate">
@@ -10,4 +11,5 @@
       </div>
     </div>
   </section>
-{{/each}}
+  {{/each}}
+</main>
